[package]
name = "myprivacy"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-multipart = "0.4.0"
actix-web = "4.1.0"
base64 = "0.13.0"
chacha20poly1305 = "0.9.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
sanitize-filename = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] }
